[workspace]
members = [
    "bicycle",   # Path to the bicycle library
    "rtreach",  # Path to the rtreach library
    "quadcopter", # Path to the quadcopter library
    "exps/bicycle_simple_exp", 
    "exps/bicycle_simple_ctrl", 
    "exps/quadcopter_simple_exp", 
    "exps/quadcopter_simple_ctrl", 
    "exps/bicycle_corr_exp", 
    "exps/quadcopter_corr_exp", 
    "exps/bicycle_nbd_exp", 
    "exps/quadcopter_nbd_exp", 
    "exps/rrt_path_generation", 
]
resolver = "2"

